@@ -3,7 +3,6 @@
 The main developers are:
 	Nigel Jones <nigelj@users.berlios.de>
 	Brian Pankey <pankey@users.berlios.de>
-	Kyle Brooks <kyleb@users.berlios.de>
 
 Contributors names can be found in "CREDITS"
 
@@ -13,6 +12,12 @@ https://developer.berlios.de/projects/ircbp/
 
 This is going to be revamped sometime soon.
 
-Before running IRCBP PLEASE EDIT ircbp.py after line 49
+Before running IRCBP PLEASE EDIT ircbpconfig.py to your tastes (although don't edit the first few lines of code)
 
 Please check the configuration options against what you want and CHANGE addmask('*!*@*') to something OTHER than that!
+
+
+
+
+
+Bugs?  https://developer.berlios.de/bugs/?group_id=2320
